# rsaitehu-drawing

./: README.md  pyproject.toml
doc/: requirements.txt
doc/source/: conf.py  drawing_module_doc.rst  index.rst  main.rst
rsaitehu_drawing/: __init__.py  main.py
rsaitehu_drawing/examples/: example_usage.py
