# rsaitehu-pointcloud/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsaitehu-drawing"
version = "0.0.1"
authors = [
  { name="José María Martínez Otzeta", email="jmartinezot@gmail.com" },
]
description = "Functions to draw geometric objects in 2D and 3D"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22.0",
  "open3d>=0.16.0"
]

[project.urls]
"Homepage" = "https://github.com/pypa/rsaitehu-drawing"
"Bug Tracker" = "https://github.com/pypa/rsaitehu-drawing/issues"

[tool.hatch.build.targets.wheel]
packages = ["rsaitehu_drawing"]



